tests/ui/redundant_as_str.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `!`
  --> $DIR/redundant_as_str.rs:17:35
   |
LL |     let borrowed_str = "Hello, world"!
   |                                      ^ expected one of `.`, `;`, `?`, `else`, or an operator

error: aborting due to previous error

